# hm-recommendation-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: ALS_predictions.parquet  Association_Rules.parquet  MBA_predictions.parquet  MBA_rules_flat.parquet  MBA_rules_grouped.parquet  ab_arm_summary.parquet  ab_segment_breakdown.parquet  ab_traffic_allocation.parquet  articles_processed.parquet  customers_processed.parquet  customers_segmented.parquet  lgbm_predictions.parquet  lgbm_test_features.parquet  lgbm_train_features.parquet  test_processed.parquet  train_processed.parquet  virtual_assistant_data.parquet
docs/: 5. RFM_Segmentation_Deep_Dive.md  6. MBA_Baseline.md  EDA Report - Comprehensive.md  Feature dictionary (Processed).md  MBA_Baseline.md  Model_Comparison_Report.md  Preprocessing Report.md  RFM_Segmentation_Deep_Dive.md  RFM_Segmentation_Summary.md  Task 1 - Data_Processing_Final.md  Task 1 - EDA Raw Report.md  Task 1 - Feature dictionary - Processed.md  Task 1 - Preprocessing Report.md  Task 4 - Model_Comparison_Report.md  Task 5 - ABTest_BusinessDecision.md  Task 5 - ABTest_BusinessDecision_shorten.md  generate_report_pdf.py
notebooks/: 02_RFM_KMeans_Segmentation.ipynb  03_MBA_Baseline.ipynb  05_ABTest_BusinessDecision.ipynb  05_LightGBM_RecSys.ipynb  06_ABTest_BusinessDecision.ipynb  4_RecSys_ALS.ipynb  RFM_KMeans_Segmentation.ipynb
scripts/: 05_feature_engineering.py  fetch_top_article_images.py
scripts/01_eda/: step1_integrity.py  step2_univariate.py  step3_temporal.py  step4_relationship.py  step5_anomaly.py  (+4 more)
(+5 files in other folders)
