[project]
name = "HnM-RecSys"
version = "0.1.0"
description = "H&M Recommendation System"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.1",
    "notebook>=7.5.5",
    "pip>=26.0.1",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "rich>=15.0.0",
    "ruff>=0.15.11",
    "seaborn>=0.13.2",
    "mlxtend",
    "pandas",
    "lightgbm",
    "gensim",
    "scikit-learn",
    "tqdm",
    "implicit>=0.7.2",
]
